[project]
name = "a2a-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.2.12",
]

[tool.setuptools]
packages = ["langgraph.templates.agent"]

[tool.setuptools.package-dir]
"langgraph.templates.agent" = "agent"
